Systre 1.1.2:

- The program is now more responsive to the cancel button.


Systre 1.1.1:

- The computation of coordination sequences now stops at 10000 nodes.
- Interlocking nets are now processed component-wise (EXPERIMENTAL).
- Archives and Delaney symbol files as input now work in command line version.
- The command line version now accepts most of the options available via GUI.
- The output for nets with errors is no longer left out from the ".out" file.
- Archive and Delaney symbol files can again be processed as regular input.
- The default relaxation step limit is now 10000 (instead of 1000).
- Locally stable crystallographic nets are now accepted (EXPERIMENTAL).


Systre 1.1.0:

- File name extensions are now case insensitive (so ".CGD" works like ".cgd").
- Unit cell volumes are now reported.
- The relaxation step limit (per phase) can now be set in the options dialog.
- Error conditions, such as OutOfMemoryError, are now caught by the GUI version.
- If explicit edges are given, no more are computed using nearest neighbors.
- Importance of equal edge lengths can be set numerically in options dialog.


Systre 1.0.0:

- Show mapping of input nodes to output nodes.
- Report coordinates of edge centers (optional).
- Implement a status bar.
- Include zeolite frameworks from Atlas.
- Add an option for processing archive files as normal input.
- Accept Delaney symbol files as input (.ds format).
- Find a better strategy for handling duplicate names or keys in archives.
- Make available input formats more transparent.
- Look ahead to see if the current input file contains more structures.
- Add "Next" button for multi-structure files.
- Support "Description" and "Reference" entries in .cgd and .arc files.
- Add option for writing complete unit cell data.
- Revise cell vectors for monoclinic and triclinic nets after cell relaxation.
- Add the "false" -z nets to the archive.
- Default origin choice (1st vs. 2nd) and H vs. R setting are now options.